# sudoku

./: CMakeLists.txt  Makefile  README.md  main.cpp
data/: debug.sh  profile.sh  run.sh  valgrind.sh
data/saves/: example.ext  to_solve.ext
src/: App.cc  App.hh  App.hxx  CMakeLists.txt
src/app/: AppDesc.hh  AppDesc.hxx  CMakeLists.txt  ColorUtils.hh  ColorUtils.hxx  Controls.hh  Controls.hxx  PGEApp.cc  PGEApp.hh  PGEApp.hxx  TexturePack.cc  TexturePack.hh  TexturePack.hxx  olcPixelGameEngine.h
src/coordinates/: CMakeLists.txt  CoordinateFrame.cc  CoordinateFrame.hh  CoordinateFrame.hxx  TopViewFrame.cc  TopViewFrame.hh  Viewport.cc  Viewport.hh
src/game/: Board.cc  Board.hh  CMakeLists.txt  Game.cc  Game.hh  Game.hxx  GameState.cc  GameState.hh  SavedGames.cc  SavedGames.hh  Sudoku.cc  Sudoku.hh
src/game/algorithm/: Board.cc  Board.hh  CMakeLists.txt  Definitions.hh  MatrixNode.cc  MatrixNode.hh  SudokuMatrix.cc  SudokuMatrix.hh  SudokuMatrixV2.cc  SudokuMatrixV2.hh
src/ui/: Action.cc  Action.hh  BackgroundDesc.cc  BackgroundDesc.hh  CMakeLists.txt  Menu.cc  Menu.hh  Menu.hxx  MenuContentDesc.cc  MenuContentDesc.hh
